Updated homepage design

--- a/index.html
+++ b/index.html
@@ -280,42 +280,59 @@
 <div class="container">
   <h3 class="text-center">Our Team</h3>
   <p class="text-center mt-3">A team of skilled professionals in:</p>
-  <div class="row text-center ps-5">
-    <div class="card col-md-3 col-sm-12  ms-5" style="width: 18rem;">
-  <img src="teacher.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Name</h5>
-    <p class="card-text">Database Development & Administration</p>
-  </div>
-</div>
-     <div class="card col-md-3 col-sm-12 ms-5" style="width: 18rem;">
-  <img src="teacher.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Name</h5>
-    <p class="card-text">Network & System Administration</p>
-  </div>
-</div>
-     <div class="card col-md-3 col-sm-12 ms-5" style="width: 18rem;">
-  <img src="teacher.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Name</h5>
-    <p class="card-text">Cyber Security & Linux</p>
-  </div>
-</div>
-    <div class="card col-md-3 col-sm-12 mt-4 teamCard" style="width: 18rem; margin-left: 190px;" >
-  <img src="teacher.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Name</h5>
-    <p class="card-text">Webite Development</p>
-  </div>
-</div>
- <div class="card col-md-3 col-sm-12 mt-4 ms-5" style="width: 18rem;">
-  <img src="teacher.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-   <h5 class="card-title">Name</h5>
-    <p class="card-text">Graphic Design & UI/UX</p>
-  </div>
-</div>
+
+  <div class="row justify-content-center">
+
+    <div class="col-12 col-sm-6 col-md-3 mb-4">
+      <div class="card h-100 text-center">
+        <img src="teacher.jpg" class="card-img-top" alt="Teacher">
+        <div class="card-body">
+          <h5 class="card-title">Name</h5>
+          <p class="card-text">Database Development & Administration</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-sm-6 col-md-3 mb-4">
+      <div class="card h-100 text-center">
+        <img src="teacher.jpg" class="card-img-top" alt="Teacher">
+        <div class="card-body">
+          <h5 class="card-title">Name</h5>
+          <p class="card-text">Network & System Administration</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-sm-6 col-md-3 mb-4">
+      <div class="card h-100 text-center">
+        <img src="teacher.jpg" class="card-img-top" alt="Teacher">
+        <div class="card-body">
+          <h5 class="card-title">Name</h5>
+          <p class="card-text">Cyber Security & Linux</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-sm-6 col-md-3 mb-4">
+      <div class="card h-100 text-center">
+        <img src="teacher.jpg" class="card-img-top" alt="Teacher">
+        <div class="card-body">
+          <h5 class="card-title">Name</h5>
+          <p class="card-text">Website Development</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-sm-6 col-md-3 mb-4">
+      <div class="card h-100 text-center">
+        <img src="teacher.jpg" class="card-img-top" alt="Teacher">
+        <div class="card-body">
+          <h5 class="card-title">Name</h5>
+          <p class="card-text">Graphic Design & UI/UX</p>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
 <!--  -->
