--- a/course.html
+++ b/course.html
@@ -203,10 +203,10 @@
         <div class="card h-100 shadow-sm">
          <img src="full stack web dev.png" class="card-img-top course-card-img" alt="Course 2">
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title fw-bold">Cybersecurity Essentials</h5>
+            <h5 class="card-title fw-bold">Full Stack Web Development</h5>
             <p class="text-warning mb-2">★★★★☆ 4.6</p>
             <p class="card-text flex-grow-1">
-              Understand the fundamentals of cybersecurity and how to protect digital systems.
+              New to the world of web development but eager to create complete applications from scratch? This Full Stack Development program will guide you through both front-end and back-end technologies, teaching you everything from building interactive user interfaces to managing databases and server-side logic.
             </p>
             <div class="d-flex justify-content-between align-items-center mt-3">
               <span class="fw-bold">$59</span>
@@ -221,10 +221,10 @@
         <div class="card h-100 shadow-sm">
           <img src="graphic designing.png" class="card-img-top course-card-img" alt="Course 2">
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title fw-bold">Data Science with Python</h5>
+            <h5 class="card-title fw-bold">Graphic Design</h5>
             <p class="text-warning mb-2">★★★★☆ 4.8</p>
             <p class="card-text flex-grow-1">
-              Master data analysis, visualization, and machine learning using Python tools.
+              New to the world of design but eager to create stunning visuals? This Graphic Design program teaches you the essentials of design, from color theory and typography to digital tools and creative techniques, helping you bring your ideas to life.
             </p>
             <div class="d-flex justify-content-between align-items-center mt-3">
               <span class="fw-bold">$79</span>
@@ -241,12 +241,12 @@
         <div class="card h-100 shadow-sm">
           <img src="mcse.png" class="card-img-top course-card-img" alt="Course 2">
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title fw-bold">Introduction to Python</h5>
+            <h5 class="card-title fw-bold">MCSE Server</h5>
             <p class="text-warning mb-2">
               ★★★★☆ 4.5
             </p>
             <p class="card-text flex-grow-1">
-              Learn Python programming from scratch with practical exercises and real projects.
+              New to server management but want to master it quickly? This MCSE Server course teaches you everything from installing and configuring Windows servers to managing networks, security, and advanced server technologies, preparing you to become a skilled IT professional.
             </p>
             <div class="d-flex justify-content-between align-items-center mt-3">
               <span class="fw-bold">$49</span>
@@ -261,10 +261,10 @@
         <div class="card h-100 shadow-sm">
           <img src="office.png" class="card-img-top course-card-img" alt="Course 2">
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title fw-bold">Web Development Bootcamp</h5>
+            <h5 class="card-title fw-bold">Microsoft Office</h5>
             <p class="text-warning mb-2">★★★★☆ 4.7</p>
             <p class="card-text flex-grow-1">
-              Build responsive websites and learn HTML, CSS, JavaScript, and modern frameworks.
+              New to office software but want to become highly efficient? This Microsoft Office course teaches you essential tools like Word, Excel, PowerPoint, and Outlook, helping you master document creation, data management, and professional presentations.
             </p>
             <div class="d-flex justify-content-between align-items-center mt-3">
               <span class="fw-bold">$69</span>
@@ -279,10 +279,10 @@
         <div class="card h-100 shadow-sm">
          <img src="software developer.png" class="card-img-top course-card-img" alt="Course 2">
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title fw-bold">Cybersecurity Essentials</h5>
+            <h5 class="card-title fw-bold">Software Developer</h5>
             <p class="text-warning mb-2">★★★★☆ 4.6</p>
             <p class="card-text flex-grow-1">
-              Understand the fundamentals of cybersecurity and how to protect digital systems.
+              New to coding but want to create real-world applications? This Software Developer program teaches you programming languages, problem-solving, and application development, equipping you with the skills to build software from scratch.
             </p>
             <div class="d-flex justify-content-between align-items-center mt-3">
               <span class="fw-bold">$59</span>
@@ -297,10 +297,10 @@
         <div class="card h-100 shadow-sm">
           <img src="video editing.png" class="card-img-top course-card-img" alt="Course 2">
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title fw-bold">Data Science with Python</h5>
+            <h5 class="card-title fw-bold">Video Editing</h5>
             <p class="text-warning mb-2">★★★★☆ 4.8</p>
             <p class="card-text flex-grow-1">
-              Master data analysis, visualization, and machine learning using Python tools.
+              New to video creation but want to craft professional content? This Video Editing course teaches you editing tools, effects, transitions, and storytelling techniques, helping you bring your visuals to life.
             </p>
             <div class="d-flex justify-content-between align-items-center mt-3">
               <span class="fw-bold">$79</span>
